# raspberry

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/nostrseal_vault/: __init__.py  adapters.py  cli.py  controls.py  crypto.py  display.py  hardware_flow.py  hardware_probe.py  limits.py  qr.py  review.py  seed_entry.py  seed_signer_hardware.py  signer.py
app/nsealr_vault/: __init__.py  adapters.py  cli.py  hardware_flow.py  hardware_probe.py  limits.py  nip06.py  qr.py  review.py  seed_entry.py  seed_signer_hardware.py  session_import_flow.py  session_source_backup_flow.py  session_source_qr.py  session_source_qr_import_flow.py  signer.py  st7789_layout.py
docs/: architecture.md  audit-checklist.md  roadmap.md  testing.md
os/: stateless-qr-vault-profile.md
tests/: test_seed_signer_hardware.py  test_st7789_layout.py  test_vault_core.py
