[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nostrseal-vault"
version = "0.1.0"
description = "Raspberry QR vault foundation for NostrSeal signing"
requires-python = ">=3.9"
dependencies = ["secp256k1==0.14.0"]

[project.scripts]
nseal-vault = "nostrseal_vault.cli:main"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
