[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nsealr-vault"
version = "0.1.0"
description = "Raspberry QR vault foundation for nSealr signing"
requires-python = ">=3.9"
dependencies = ["mnemonic==0.21", "secp256k1==0.14.0"]

[project.scripts]
nsealr-vault = "nsealr_vault.cli:main"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
